style.css
html {
    background:#DDD;
    width:100%;
}

h1 {
    font-size:2em;
}

h2 {
    font-size:1.7em;
}

h3 {
    font-size:1.5em;
}

.menu {
    display: flex;
    flex-wrap: wrap;
    background:#333;
    justify-content:center;
    max-width: 100%;
}

.menuItem {
    height:50px;
    min-width: 150px;
    background: black;
    margin: 5px;
    color:white;
    font-weight:bold;
    text-align:center;
    flex-grow:0;
    text-decoration:none;
    line-height:50px;
}

.menuItem a:link {
    color:white;
}

.menuItem:hover {
    background: gray;
}

.banner {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    box-orient: horizontal;
    flex-direction: row;

    -webkit-box-pack: center;
    -moz-box-pack: center;
    box-pack: center;
    justify-content: center;

    -webkit-box-align: center;
    -moz-box-align: center;
    box-align: center;
    align-items: center;

}

.bannerImg{
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;
    -webkit-flex: 1 1 auto;
    flex: 1 1 auto; 

    padding: 10px;
    margin: 10px;
    text-align: center;
}

.bannerImg img {
    max-width:100%;
    max-height:280px;
}

.thepage {
    display:flex;
    max-width: 100%;
    flex-wrap: wrap;
}

.main {
    margin:50px;
    max-width:calc(100% - 420px);
    flex-grow:1;
}

.numbers {
    position:absolute;
    height:300px;
    top:0px;
    left:0px;
    background-color: #000;
    color: #020;
    font-size: 14px;
    overflow: hidden;
    text-align:justify;
    z-index:-1;
}

p {
    text-align:justify;
    max-width: 800px;
    text-indent:50px;
    line-height:30px;
}

.fb-comments {
    width:90%;
}

.propLateralDireita {
    flex-grow:1;
    background:#bbb;
    max-width:160px;
}

.propLateralEsquerda {
    flex-grow:1;
    background:#bbb;
    max-width:160px;
}

.youtube {
    max-width:840px;
}

.curso {
    display:flex;
    flex-direction:row;
    border:black 3px solid;
    padding:5px;
    border-radius:10px;
    background-color: rgb(150,150,150);
    margin:5px;
}

.curso:hover {
    background-color: rgb(100,100,100);
}

.curso h3 {
    margin:0px 0px 10px 0px;
    padding:10px;
    background-color:rgb(200,200,200);
    color:black;
}

.aula h3 {
    margin:0px 0px 10px 0px;
    padding:10px;
    background-color:rgb(200,200,200);
    color:black;
}

.curso img {
    margin: auto;
    width:400px;
    height:225px;
}

.aula img {
    margin: auto;
    width:400px;
    height:225px;
}

.curso p {
    margin:auto;
    text-indent:0px;
    padding:5px;
    color:black;
}

.aula p {
    margin:auto;
    text-indent:0px;
    padding:5px;
    color:black;
}

a:link {
    text-decoration:none;
    font-weight:bold;
}

.aula {
    display:flex;
    flex-direction:column;
    border:black 3px solid;
    padding:5px;
    border-radius:10px;
    background-color: rgb(150,150,150);
    margin:5px;
}

.aula:hover {
    background-color: rgb(100,100,100)
}

.aula .content {
    display:flex;
}

.aulaImg img{
    max-width:800px;
}

.legend {
    text-align:center;
    text-indent:0px;
    text-decoration:None;
    color:black;
}

.highlight {
    max-width: 800px;
    text-align:left;
    padding:5px;
    background:rgba(200,200,250,1);
    border:black 3px solid;
    border-radius: 10px;
    font-weight:bold;
    overflow:auto;
}

.download {
    text-align:center;
    text-indent:0px;
    text-decoration:None;
    color:black;
    font-size:17pt;
}

@media only screen and (max-width: 626px) {
    .propLateralEsquerda{
        display:None;
    }

    .propLateralDireita{
        display:None;
    }

    .main {
        margin:10px;
        max-width:calc(100% - 10px);
        flex-grow:1;
    }

    .curso {
        flex-direction:column;
    }

    .curso img {
        width:100%;
        height:100%;
    }

    .content {
        flex-direction:column;
    }

    .aula img {
        width:100%;
        height:100%;
    }

    .aulaImg img{
        width:100%;
    }
}

@media only screen and (max-width: 976px) and (min-width: 627px) {
    .propLateralDireita{
        display:None;
    }

    .main {
        margin:10px;
        max-width:calc(100% - 180px);
        flex-grow:1;
    }
    
    .curso {
        flex-direction:column;
        width:100%;
    }

    .curso img {
        max-width:500px;
        width:100%;
        height:100%;
    }

    .aula img {
        width:100%;
        height:100%;
    }

    .aulaImg img{
        width:100%;
        padding:10px;
    }

    .content {
        flex-direction:column;
    }
    
}

